# volume-ratio

./: .gitignore  README.md  config.yaml.example  deepseek-issue.md  index.html  mimo-issue.md  package-lock.json  package.json  pyproject.toml  todo.md  vite.config.ts  跨市场量比监控-MiniMax-M2.7-实现方案.md  迭代v1.md  迭代v2.md
.github/workflows/: ci.yml  release.yml
.qoder/repowiki/zh/content/: 快速开始.md  故障排查.md  配置管理.md
.qoder/repowiki/zh/content/数据存储与管理/: 数据存储与管理.md  数据库设计.md  数据生命周期管理.md  文件存储机制.md
.qoder/repowiki/zh/content/核心功能模块/: LLM集成模块.md  信号检测与告警系统.md  实时数据采集系统.md  市场工具模块.md  显示格式化模块.md  核心功能模块.md  配置管理系统.md  量比计算引擎.md
.qoder/repowiki/zh/content/用户交互界面/: 命令行界面.md  用户交互界面.md  飞书机器人界面.md
.qoder/repowiki/zh/content/系统管理/: 启动与关停管理.md  数据清理与维护.md  系统管理.md  进程监控与守护.md  长桥同步功能.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: changelog-2026-05-01-fixes.md
scripts/: alert.py  api_server.py  backfill_minute_bars.py  bot_start.py  bot_stop.py  cleanup.py  cli.py  collect.py  collect_ws.py  collect_ws_launcher.py  compute.py  feishu_bot.py  feishu_bot_launcher.py  llm.py  longbridge_sync.py  notification_queue.py  start_all.py  stop_all.py
scripts/core/: __init__.py  config.py  display.py  market.py  silence.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  python_manager.rs
src/components/: Dashboard.tsx  RatioChart.tsx  Settings.tsx  SignalList.tsx  Watchlist.tsx
src/hooks/: useWebSocket.ts
src/lib/: api.ts  notifications.ts  types.ts
(+5 files in other folders)
