[package]
name = "volume-ratio-desktop"
version = "0.1.0"
description = "Cross-market volume ratio monitor"
authors = ["shinji"]
edition = "2021"

[lib]
name = "volume_ratio_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
